--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeInWen.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeInWen.html.twig
@@ -32,5 +32,6 @@ return false;
 {% endif %}
 {% endif %}
 </table>
+<input type="hidden" value="{{ csrf_token }}" name="csrf_token" />
 </form>
 </BODY></HTML>
