--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/julyActivity.html.twig
@@ -32,6 +32,7 @@
                     <div class="fl">
                     <table border="0" cellpadding="0" cellspacing="0">
                         <tbody>
+                            {%if users.0 is defined %}
                             {% for user in users.0 %}
                             <tr {%if user.4 in [1, 3, 10, 50] %} class="red" {% endif %}> {# 1,3,10,50 is ranking number#}
                                 <td width="30%">第{{ user.4}}名</td>
@@ -39,19 +40,22 @@
                                 <td width="35%">获得{{ user.3 }}米粒</td>
                             </tr>
                             {% endfor %}
+                            {% endif %}
                         </tbody>
                     </table>
                     </div>
                     <div class="fl">
                     <table border="0" cellpadding="0" cellspacing="0">
                         <tbody>
+                          {%if users.1 is defined %}
                           {% for user in users.1 %}
                             <tr {%if user.4 == 100 %} class="red" {% endif %}> {# 100 is ranking number#}
                                 <td width="30%">第{{ user.4}}名</td>
                                 <td width="35%">{{ user.2[:3] }}**</td>
                                 <td width="35%">获得{{ user.3 }}米粒</td>
                             </tr>
-                            {% endfor %}
+                          {% endfor %}
+                          {% endif %}
                         </tbody>
                     </table>
                     </div>
@@ -61,6 +65,7 @@
                     <div class="rankRefer">
                         <table border="0" cellpadding="0" cellspacing="0">
                         <tbody>
+                            {%if users.2 is defined %}
                             {% for user in users.2 %}
                             <tr class="red">
                                 <td width="30%">第{{ user.4}}名</td>
@@ -68,6 +73,7 @@
                                 <td width="35%">获得{{ user.3 }}米粒</td>
                             </tr>
                             {% endfor %}
+                            {% endif %}
                         </tbody>
                     </table>
                     </div>
