--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/septemberActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/septemberActivity.html.twig
@@ -32,6 +32,7 @@
           <div class="fl">
             <table border="0" cellpadding="0" cellspacing="0">
               <tbody>
+                {%if users.0 is defined %}
                 {% for user in users.0 %}
                 <tr {%if user.4 is defined and user.4 in [1, 3, 10, 50] %} class="yellow" {% endif %}>{# 1,3,10,50 is ranking number#}
                   <td width="25%">第{{ user.4}}名</td>
@@ -39,12 +40,14 @@
                   <td width="40%">获得{{ user.3 }}米粒</td>
                 </tr>
                 {% endfor %}
+                {% endif %}
               </tbody>
             </table>
           </div>
           <div class="fl">
             <table border="0" cellpadding="0" cellspacing="0">
               <tbody>
+                {%if users.1 is defined %}
                 {% for user in users.1 %}
                 <tr {%if user.4 is defined and user.4 == 100 %} class="yellow" {% endif %}> {# 100 is ranking number#}
                   <td width="25%">第{{ user.4}}名</td>
@@ -52,6 +55,7 @@
                   <td width="40%">获得{{ user.3 }}米粒</td>
                 </tr>
                 {% endfor %}
+                {% endif %}
               </tbody>
             </table>
           </div>
