--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -127,7 +127,9 @@ $(document).ready(function(){
             </div>
         </div>
     </div>
-    {% if app.session.has('uid') %}
+    <!--start checkin div-->
+    {% if app.session.has('uid') %}{# todo add && checkin_task_uncomplete_yet #}
     	{{ render(controller('JiliApiBundle:Top:checkIn' , {auto_checkin: app.request.get('auto_checkin',0)}) ) }}{# 签到 #}
 	{% endif %}
+    <!--end checkin div-->
  
