--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -32,9 +32,10 @@
 
 <script>
 var urls = urls || {};
+//todo: remove urls , use fosjs.routing instead
 urls={
         advertiserment_click:"{{ path('_advertiserment_click') }}",
-        checkin_issetClick:"{{ path('_checkin_issetClick') }}",
+//        checkin_issetClick:"{{ path('_checkin_issetClick') }}",
         checkin_clickInsert:"{{ path('_checkin_clickInsert') }}",
         checkin_location:"{{ path('_checkin_location') }}",
         checkin_clickCount:"{{ path('_checkin_clickCount') }}",
