--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -45,7 +45,7 @@
        	<p>我想以后点击‘签到’按钮自动完成签到？</p>
         <div class="btns"><a href="javascript: void(0)" class="confirm">确定</a><a href="javascript: void(0)">放弃</a></div>
     </div>
-    <div class="setSuccess">设置成功！</div>
+    <div class="setSuccess">设置成功</div>
 </div>
 
 <div id="confirmAutoFrame" style="display: none;">
