10月活动 积粒首页加banner #495

--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -92,16 +92,16 @@ $(document).ready(function(){
     {% endif %}  
     </div>
 {% if app.request.attributes.get('_route') == '_homepage' %}
-    <!--<div class="indexTopbannerWrap">
+    <div class="indexTopbannerWrap">
     	<div id="banner" class="indexTopbanner" style="display:none;">
-            <a href="{{ path('_monthActivity_september') }}"><img src="{{ asset('images1408/sepUnFoldBanner.jpg') }}" width="1000" height="300" /></a>
+            <a href="{{ path('_monthActivity_october') }}"><img src="{{ asset('images1408/sepUnFoldBanner.jpg') }}" width="1000" height="300" /></a>
             <span class="indexTopbannerFold">展开<s></s></span>
         </div>
         <div id="top" class="indexTopbanner">
-            <a href="{{ path('_monthActivity_september') }}"><img src="{{ asset('images1408/sepFoldBanner.jpg') }}" width="1000" height="60" /></a>
-            <span class="indexTopbannerFold">展开<s></s></span>
+            <a href="{{ path('_monthActivity_october') }}"><img src="{{ asset('images1408/octFoldBanner.jpg') }}" width="1000" height="60" /></a>
+            <!--<span class="indexTopbannerFold">展开<s></s></span>-->
         </div>
-    </div>-->
+    </div>
 {% else %}
 {% endif %}
     <div class="headerConWrapper">
