--- a/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
@@ -3,7 +3,13 @@
         <div class="headPort"><img src='{{ asset(app.session.get('icon_path','images1408/headPortBg.jpg' ) ) }}' height='46'/></div>
         <div class="welcome">欢迎您，<div class="userName">{{ app.session.get('nick') }}</div></div>
         {% if userCheckin is defined and userCheckin == 1 %}
-        <div class="signBtn" id="mysign" onclick="signs();"><span class="signIcon"></span><span id="signTxt">手动签到</span></div>
+        <div class="signBtn" id="mysign" onclick="signs();"><span class="signIcon"></span><span id="signTxt">
+{% if checkinOpMethod == 1 %}
+        自动签到
+{% else %}
+        手动签到
+{% endif %}
+        </span></div>
         {% else %}
         <div class="btnHascheckin" id="mysign"><span class="signIcon"></span><span id="signTxt">已签到</span></div>
         {% endif %}
