--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -17,7 +17,9 @@
 <div id="signInFrame" style="display:none;">
     <a class="close_checkin">关闭</a>
     <div class="signInCon">
-        <div class="signInOptions"><span class="active" id="set_manualcheckin">手动签到</span><span id="set_autocheckin" class="autoSignIn" >我想以后自动签到<a href="javascript:void(0)">详情</a></span><p><strong>自动签到</strong>：选择‘自动签到’以后，点击‘签到’按钮，系统将自动随机选择3-6个商家完成签到</p></div>
+        <div class="signInOptions">
+            <span class="active" id="set_manualcheckin">{{  app.request.get('auto_checkin', 0 ) ==  1 ? '我想以后' : ''}}手动签到</span>
+            <span id="set_autocheckin" class="autoSignIn" >{{  app.request.get('auto_checkin', 0 ) ==  1 ? '' : '我想以后'}}自动签到<a href="javascript:void(0)">详情</a></span><p><strong>自动签到</strong>：选择‘自动签到’以后，点击‘签到’按钮，系统将自动随机选择3-6个商家完成签到</p></div>
         <div class="signInManual">
             {% if app.request.get('auto_checkin', 0 ) ==  0 %}
             <h5>打开以下<strong id="remain">3</strong>个商城就可以得到<strong>1</strong>个米粒！</h5>
@@ -60,24 +62,4 @@ var jili_autocheckin = jili_autocheckin || {};
 jili_autocheckin.advertiserments = {{ arrList|json_encode()|raw  }};
 jili_autocheckin.checkin_point = {{ checkinPoint|raw  }};
 jili_autocheckin.is_request = {{   app.request.get('auto_checkin', 0 )  ? 1 : 0  }};
-// jili_autocheckin.is_config = {{ is_autocheckin_config|default(0) }};
-
-// var jili_urls = jili_urls || {};
-// jili_urls.autocheckinconfig =  {
-// "create": "{{ path('autocheckinconfig_create') }}",
-// "update": "{{ path('autocheckinconfig_update') }}",
-// "delete": "{{ path('autocheckinconfig_delete') }}",
-// };
-
-//$("a.set-autocheckin").onclick = function() {
-//    console.log( "Just For Fun");
-//    return false;
-//}
-
-// {% if is_auto_checkin is defined and is_auto_checkin == true %}
-// jili_autocheckin.is_set = true;
-// {% else  %}
-// jili_autocheckin.is_set = false;
-// {% endif %}
-
 </script>
