--- a/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -42,7 +42,7 @@
                             <span id="emailError">
                             </span>
                             </dt></li>
-                        <li><dd>密码：</dd><dt><input name="nick" type="text" class="text" id="nick" value="{{ pwd }}"><br />
+                        <li><dd>密码：</dd><dt><input name="pwd" type="password" class="text" id="pwd" value="{{ pwd }}"><br />
                         <span id="nickError">
                             {% if 1 %}
                                 {# if code_nick #}
