--- a/src/Jili/ApiBundle/Resources/views/Wenwen/bind.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Wenwen/bind.html.twig
@@ -1,8 +1,15 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!doctype html>
 <html>
 <head>
-<title>积粒网-91问问账号关联</title>
-<meta http-equiv=content-type content="text/html; charset=utf-8">
+<meta charset="UTF-8" />
+<title>积粒网-91问问账号绑定</title>
+{% include 'JiliApiBundle::seo.html.twig' %}
+<!-- [if lt IE9] -->
+<script src="/js/html5.js" type="text/javascript"></script>
+<!-- [endif] -->
+<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/bind.css')}}" rel="stylesheet" type="text/css" />
 <script type="text/javascript">
 function load(){
     {% if bind_status is defined and bind_status == 1 %}
@@ -11,9 +18,9 @@ function load(){
 }
 </script>
 </head>
-<body onload="load()">
-<div class="content"><a
-    href="{{connect_url}}">账号关联</a>
-</div>
+<body>
+{% include 'JiliApiBundle::userHead.html.twig' %}
+<div class="bindWrap"> <img src="{{ asset('images/bindPic.jpg') }}"> <a href="{{connect_url}}" class="bindBtn">立即绑定</a> </div>
+{% include 'JiliApiBundle::userFoot.html.twig' %}
 </body>
 </html>
