--- a/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
@@ -1,24 +1,32 @@
 <div class="shopActList">
     {% for item in market %}
-    <div class="shopActItem">
+    <div class="shopActItem mb15">
         <div class="shopActImg"><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank"><img src="{{ asset(item.activityImage) }}" width="420" height="168" alt="{{ item.businessName }}" title="{{ item.businessName }}"/></a></div>
         <div class="shopActInfo">
-            <p class="tit">
-            	<span class="tt">{{ item.title }}</span>
-            	<span class="rebate"><span></span>
-                {% if item.incentiveType==1 %}
-                     {{ item.incentive }}米粒
-                {% elseif item.incentiveType==2 %}
-                     最高返{{ item.reward_rate }}%
-                 {% endif %}
-                 </span>
+            <p class="tit mt5">
+            	<span class="tt fnLeft" title="{{ item.title }}">{{ item.title }}</span>
+            	<span class="businessName fnLeft"><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank" title="{{ item.businessName}}">{{ item.businessName}}</a></span>
             </p>
-            <p class="businessName"><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank" title="{{ item.businessName}}">{{ item.businessName}}</a></p>
+            
             <p class="dis">{{ item.activityDescription}}</p>
-            <p class="link">
-            	<span class="publicAttention">{{ item.click}}人关注</span>
-                <span class="linkBtn"><a href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank" title="去看看">去看看<span class="arrow"></span></a></span>
-        	</p>
+            <div class="shopActDetail">
+            	<div class="dl">
+                	<div class="rebate br3">
+                    	<span class="pl5 pr5">最高返</span>
+                        <span class="num pl5 pr5 globRed">
+                            {% if item.incentiveType==1 %}
+                                 {{ item.incentive }}米粒
+                            {% elseif item.incentiveType==2 %}
+                                 {{ item.reward_rate }}%
+                            {% endif %}
+                        </span>
+                    </div>
+                	<div class="publicAttention"><span class="globRed">{{ item.click}}</span>人关注</div>
+                    
+                </div>
+            	
+                <span class="linkBtn"><a class="br3" href="{{ path('_checkin_location') }}?markid={{ item.id }}&type=2" target="_blank">去看看<span class="arrow"></span></a></span>
+        	</div>
         </div>
     </div>
     {% endfor %}
