--- a/web/css1408/jl.ui.common.css
+++ b/web/css1408/jl.ui.common.css
@@ -8,6 +8,7 @@ body{
 a{ color: #333;}
 strong,b{ font-weight:bold;}
 .globRed{ color:#f75232;}
+.globRed2{color:#fd6244;}
 .lightGray{ color:#999;}
 .clearfix:after{
 	clear:both;
@@ -39,6 +40,26 @@ strong,b{ font-weight:bold;}
 }
 .mt10{
 	margin-top: 10px;
+}
+.ml5{ 
+	margin-left:5px;
+}
+.mt5{
+	margin-top:5px;
+}
+.mb15{
+	margin-bottom:15px;
+}
+.pl5{ 
+	padding-left:5px;
+}
+.pr5{ 
+	padding-right:5px;
+}
+.br3{
+	-moz-border-radius: 3px; 
+	-webkit-border-radius: 3px; 
+	border-radius: 3px;
 }
 /*header&footer*/
 .topNavs{
