--- a/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -25,10 +25,14 @@
                         <form action="{{ path('qq_registe') }}" method="post" name="form1" id="form1" >
                         <ul class="addAccount">
                         	<li>已创建一个新账号，请您完善个人资料</li>
-                            <li class="qqMsg"><span><img height="48" src="/images1408/headPortBg.jpg"></span><span>昵称：{{ nickname }}<br/>性别：{{ sex }}</span></li>
-                            <li>为保障您的账号安全，请设置QQ邮箱作为找回账号的方式。</li>
-                            <li><label for="qqEmail">邮箱地址：</label><input id="email" name="qqEmail" class="qqEmail" type="text" value="{{ email }}"/>@qq.com<strong class="errorMsg" id="emailError">输入的错误信息好多啊</strong></li>
-                            <li><label for="setPwd">设置密码：</label><input name="setPwd" type="password"/></li>
+                                <li class="qqMsg"><span><img height="48" src="/images1408/headPortBg.jpg"></span>
+                                    <span>昵称：{{ nickname }}<br/>性别：{{ sex }}</span>
+                                    <input type="hidden" name="qqnickname" value="{{ nickname }}"/>
+                                    <input type="hidden" name="sex" value="{{ sex }}"/>
+                                </li>
+                                <li>为保障您的账号安全，请设置QQ邮箱作为找回账号的方式。</li>
+                                <li><label for="qqEmail">邮箱地址：</label><input id="email_id" name="email_id" class="qqEmail" type="text" value="{{ email }}"/>@qq.com<strong class="errorMsg" id="emailError">输入的错误信息好多啊</strong></li>
+                                <li><label for="setPwd">设置密码：</label><input name="pwd" type="password" value=""/></li>
                             <li><input type="checkbox" checked/>下次自动登录</li>
                             <li><span class="submitBtn" id='info'>完善资料</span><span id='reg' class="submitBtn">立即登录</span></li>
                         </ul>
@@ -39,8 +43,8 @@
                         <ul class="bindAccount">
                             <li>将已有的积粒网账号与QQ账号绑定</li>
                             <li><label for="kxUser">积粒账号：</label><input name="kxUser" type="text" value="{{ email }}"/><strong class="errorMsg" id="emailError">输入的错误信息好多啊</strong></li>
-                            <li><label for="kxPwd">登录密码：</label><input id="pwd" name="kxPwd" type="password"/>{% if 1 %}
-                            {# if code_nick #}
+                            <li><label for="kxPwd">登录密码：</label><input id="pwd" name="kxPwd" type="password" value=""/>{% if 1 %}
+                                {# if code_nick #}
                                 <strong class="errorMsg" id="nickError">{# code_nick #}</strong>
                             {% else %}2-20个字符
                                 {% endif %}</li>
