--- a/src/Jili/FrontendBundle/Resources/views/Home/adExperience.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/adExperience.html.twig
@@ -8,7 +8,7 @@
     {% endif %}
 
     <li class="ad1">
-        <a href="{{link}}"><img src="{{ item.missionImgUrl }}" width="116" height="78" alt="{{ item.missionTitle }}" title="{{ item.missionTitle }}"></a>
+        <a href="{{link}}"><img src="{{ asset(item.missionImgUrl) }}" width="116" height="78" alt="{{ item.missionTitle }}" title="{{ item.missionTitle }}"></a>
         <a class="pointNum" href="{{link}}"><span class="globRed">{{ item.point }}</span><span class="lightGray">米粒</span></a>
     </li>
     {% endfor %}
