--- a/web/css1408/jl.ui.common.css
+++ b/web/css1408/jl.ui.common.css
@@ -40,6 +40,12 @@ strong,b{ font-weight:bold;}
 .mt10{
 	margin-top: 10px;
 }
+.mt15{
+	margin-top:15px;
+}
+.mt20{
+	margin-top:20px;
+}
 /*header&footer*/
 .topNavs{
 	text-align:right;
