--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -58,6 +58,7 @@ strong, b, .strong{font-weight: bold;}
 .dispalyBlock{ display:block;}
 .boxShadowGlobal{-moz-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;-webkit-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;box-shadow: 1px 1px 6px #ddd,1px -1px 6px #ddd;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ color:#666;}
+.textUL{ text-decoration:underline;}
 #header{ width:100%;}
 #topbar{ background-color:#f5f5f5; width:100%; height:30px; line-height:30px; color:#666; border-bottom: 1px solid #ececec;}
 #userbar{ float:right; position:relative;}
