#469 add filter of checkin shopslist

--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -148,6 +148,7 @@ function isNewMs( ){
 {% block body %}{% endblock %}
 </div>	
 {% include 'JiliApiBundle::footer.html.twig' %} 
+{# 如果不是自动签到页面 #}
 {% if (0 == app.request.get('auto_checkin',0) ) %}
 {% include '::userinfo.html.twig' %}
 {% endif %}
