--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -26,7 +26,6 @@
 <script src="{{ asset('js1408/jl.ui.header.js') }}" language="javascript"></script>
 
 <script src="{{ asset('js/analytics.js')}}" type="text/javascript"></script>
-<script src="{{ asset('js1408/checkin.js') }}" language="javascript"></script>
 <script src="{{ asset('js/bottom.js')}}" type="text/javascript"></script> 
 <script src="{{ asset('bundles/jilifrontend/js/base.js')}}" type="text/javascript"></script> 
 
@@ -56,7 +55,7 @@ $(document).ready(function(){
   {% if app.session.get('uid') %}
       showFlag();
       isVisit();
-      isNewMs();
+      isNewMs( {{ app.session.get('uid') }});
       countMs();
       $(".closeBtn").click(function(){
           $('.amazon').hide();
@@ -104,7 +103,7 @@ $(document).ready(function(){
  
       });
 
-{% if (0 == app.request.get('auto_checkin',0) ) %}
+  {% if (0 == app.request.get('auto_checkin',0) ) %}
       isExistInfo();
       showInfo();
       getYear_amazon(); 
@@ -116,23 +115,25 @@ $(document).ready(function(){
 
 });
 
-function isNewMs( ){
-   {% if app.session.get('uid') %}
-   $.ajax({
-          url: "{{ path('_user_isNewMs',{'id':app.session.get('uid')}) }}",
-          type: "POST",
-          success:function(data){
-              if(data){
-                   $('.newms').attr('href',"{{ path('_user_message',{'sid': 2}) }}"); 
-                   $('.myMes').attr('href',"{{ path('_user_message',{'sid': 2}) }}"); 
-              }else{
-                  $('.newms').attr('href',"{{ path('_user_message',{'sid': 1}) }}"); 
-                  $('.myMes').attr('href',"{{ path('_user_message',{'sid': 1}) }}"); 
-              }
-          }
-        });
-  {% endif %}
-}
+// duplicated to  
+//function isNewMs(uid ){
+//   {% if app.session.get('uid') %}
+//   $.ajax({
+//          url: "{{ path('_user_isNewMs',{'id':app.session.get('uid')}) }}",
+//          type: "POST",
+//          success:function(data){
+//              var sid = 1
+//              if(data){
+//                  sid = 2;
+//              }
+//              var msg_url = Routing.generate( "_user_message", {"sid": sid});
+//                   $('.newms').attr('href',msg_url); 
+//                   $('.myMes').attr('href',msg_url); 
+//                   $('.message').attr('href',msg_url); 
+//          }
+//        });
+//  {% endif %}
+//}
 
 </script>
 {% block javascript %}
