--- a/web/css/taobao.css
+++ b/web/css/taobao.css
@@ -1,7 +1,7 @@
 ul,li{ list-style:none; margin:0; padding:0;}
 a{ text-decoration:none;}
 .corBO{ color:#ff340b;}
-.taobaoWrap{ width:1001px; margin:10px auto;}
+.taobaoWrap{ width:1001px; margin:10px auto; text-align: left;}
 .itemL{ width:737px; float:left;}
 .itemL .taobaoSearch,.itemL .tablist,.itemR .discover dd{ border-right:1px solid #e2e2e2; border-bottom:2px solid #e2e2e2;}
 .itemL .taobaoSearch{ height:85px; padding:20px 0 0 34px; background:#fff;}
@@ -17,11 +17,12 @@ a{ text-decoration:none;}
 .itemL .tablist ul li{ margin-bottom: -1px; width: 730px; background: #fff; padding: 5px 0 0 5px;}
 .itemR{ width:248px; float:right;}
 .itemR .discover .pt{ background:url(../images/taobao/lovedx.jpg) no-repeat 0 3px; padding-left: 20px;}
-.itemR .discover dt{ font-family:Microsoft Yahei,SimHei,Tahoma; margin-bottom:10px; color:#333;}
+.itemR .discover dt{ font-family:Microsoft Yahei,SimHei,Tahoma; font-size: 16px; margin-bottom:10px; color:#333;}
 .itemR .discover dd{ background:#fff; margin:0;}
 .itemR .discover .mt{ background:url(../images/taobao/lovedp.jpg) no-repeat 0 3px; padding-left: 20px;}
 .itemR .rPt .discover{width:248px; margin-top: 8px;}
 .itemR .rPt .discover .pl ul li{margin: 5px auto; width: 230px;}
+.itemR .rMall{ margin-top: 15px;}
 .itemR .rMall .discover dd{ padding:20px;}
 .itemR .rMall .discover dd ul li{ height:94px;}
 .itemR .rMall .discover .listGroup .img{ float:left; margin-right: 10px;}
