--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -13,6 +13,9 @@
 <div class="" style="">
     <div class="taobaoWrap">
         <div class="itemL">
+        	<div class="taobaoNotice">
+        		<em></em>注意：通过积粒网的淘宝页面购物，每月将有机会参与抽奖，但无返利。
+       		</div>
             <div class="taobaoSearch"> {{ render(controller('JiliFrontendBundle:Taobao:searchBox' ) ) }} </div>
             <div id="tabs"> {{ render(controller('JiliFrontendBundle:Taobao:category' ) ) }} </div>
         </div>
