js效果相关代码添加 #504

--- a/src/Jili/FrontendBundle/Resources/views/Taobao/category.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/category.html.twig
@@ -11,6 +11,7 @@
         {% endfor %}
         <img src="{{ asset('images/taobao/items.jpg')}}"/>
     </div>
+    <div id="more" class="more"><a href="/taobao/category?id=1&page=2"></a></div>
 </div>
     
 
