--- a/src/Jili/FrontendBundle/Resources/views/Taobao/item.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/item.html.twig
@@ -2,6 +2,9 @@
     <dt class="pt">发现<span class="corBO">好东西</span></dt>
     <dd class="pl">
         <ul>
+            {% for item in items %}
+            <li>{{item.content}}</div></li>
+            {% endfor %}
             <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
             <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
             <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
