--- a/src/Jili/FrontendBundle/Resources/views/Taobao/item.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/item.html.twig
@@ -3,12 +3,12 @@
     <dd class="pl">
         <ul>
             {% for item in items %}
-            <li>{{item.content}}</div></li>
+            <li>{{item.content}}</li>
             {% endfor %}
+            <!--  <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
             <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
             <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
-            <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
-            <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>
+            <li><img src="{{ asset('images/taobao/product.png')}}" width="224" height="305"/></li>-->
         </ul>
         <!--<ul>
             <li><a data-type="0" biz-itemid="41318694671" data-tmpl="230x312" data-tmplid="4" data-rd="2"
