--- a/src/Jili/FrontendBundle/Resources/views/Taobao/shop.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/shop.html.twig
@@ -3,9 +3,9 @@
     <dd>
         <ul>
             {% for item in shops %}
-            <li class="listGroup">{{item.content}}</div></li>
+            <li class="listGroup">{{item.content}}</li>
             {% endfor %}
-
+<!--  
             <li class="listGroup">
                 <a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DuxBQSxmhYI8cQipKwQzePDAVflQIoZepK7Vc7tFgwiFRAdhuF14FMcwpGhu9WbVWxq3IhSJN6GSni5lBbADrc3xDqtQcjpsJPsM3HHzvybx284PIvSmbAtEew1By%2BI5k"
                    class="img" target="_blank"><img
@@ -26,7 +26,7 @@
                         src="http://logo.taobaocdn.com/shop-logo/92/e1/T1vdyGXblyXXb1upjX.jpg"></a>
                 <a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DfQJL8zTs6TIcQipKwQzePDAVflQIoZepK7Vc7tFgwiFRAdhuF14FMctkSSJcOZhCRitN3%2FurF3yni5lBbADrc3xDqtQcjpsJPsM3HHzvybxmIGZ3z05CmlVuwQ5Jyifg"
                    class="name" title="骆驼男装旗舰店" target="_blank">骆驼男装旗舰店</a>
-            </li>
+            </li>-->
         </ul>
     </dd>
 </dl>
