--- a/src/Jili/FrontendBundle/Resources/views/Taobao/category.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/category.html.twig
@@ -15,5 +15,5 @@
         {% endfor %}
         <!--  <img src="{{ asset('images/taobao/items.jpg')}}"/> -->
     </div>
-    <div id="more" class="more"><a href="/taobao/category?id=1&page=2"></a></div>
+    <div id="more" class="more"><a href="{{ path('jili_frontend_taobao_categoryapi') }}?id=1&page=2"></a></div>
 </div>
