--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -7,53 +7,39 @@
 
 {% block javascript %}
 <script src="{{ asset('js/jquery.infinitescroll.js')}}" type="text/javascript"></script>
+<script src="{{ asset('bundles/jilifrontend/js/taobao.js') }}" language="javascript"></script>
 {% endblock %}
  
 {% block body %}
 <div class="" style="">
     <div class="taobaoWrap">
         <div class="itemL">
-        	<div class="taobaoNotice">
-        		<em></em>注意：通过积粒网的淘宝页面购物，每月将有机会参与抽奖，但无返利。
-       		</div>
+            <div class="taobaoNotice">
+                <em></em>注意：通过积粒网的淘宝页面购物，每月将有机会参与抽奖，但无返利。
+           </div>
             <div class="taobaoSearch"> {{ render(controller('JiliFrontendBundle:Taobao:searchBox' ) ) }} </div>
-            <div id="tabs"> {{ render(controller('JiliFrontendBundle:Taobao:category',{'id':1} ) ) }} </div>
+            <div id="tabs"> 
+                <ul class="ltab">
+                    {% for item in category %}
+                    <li {% if current_id == item.id %} class="ui-tabs-active" {% endif %}><a href="javascript:void(0);" onclick="jili.taobao.searchBycatgory({{item.id}});">{{item.categoryName}}</a></li>
+                    {% endfor %}
+                </ul>
+                <div class="tablist block" id="tabs-1">
+                    <div id="waterfall">
+                        <!--  <img src="{{ asset('images/taobao/items.jpg')}}"/> -->
+                    </div>
+                    <div id="more" class="more"></div>
+                </div>
+            </div>
         </div>
         <div class="itemR">
             <div class="rPt"> {{ render(controller('JiliFrontendBundle:Taobao:item' ) ) }} </div>
             <div class="rMall"> {{ render(controller('JiliFrontendBundle:Taobao:shop' ) ) }} </div>
         </div>
     </div>
-    <script type="text/javascript">
-    $('#tabs-1').infinitescroll({
-        loading: {
-            finishedMsg: "<br style='clear:both'/><em>没有更多了。</em>",
-            img: "{{ asset('images/taobao/progressBar.gif')}}",
-            msgText: ""
-        },
-        navSelector: '#more',
-        nextSelector: '#more a',
-        itemSelector: ".cell",
-        debug: true,
-		dataType: 'json',
-		contentSelector: '#waterfall',
-        animate: false,
-        extraScrollPx: 50,
-		template: function(data) {
-            $boxes = $("<div class = 'container'></div>");
-            $.each(data.keywords, function(key, value)
-            {
-                myString = "<div class = 'cell'>" + value.content + "</div>";
-                $box = $(myString);
-                $boxes.append($box);
-				console.log(value.content);
-            });
-			
-			return $boxes.find('.cell');
-		}
-    })
-</script>
-<script type="text/javascript"> (function (win, doc) {
+    
+<script type="text/javascript"> 
+(function (win, doc) {
     var s = doc.createElement("script"), h = doc.getElementsByTagName("head")[0];
     if (!win.alimamatk_show) {
         s.charset = "gbk";
@@ -65,7 +51,46 @@
     var o = { pid: "mm_49376465_4372428_26502700", /*推广单元ID，用于区分不同的推广渠道*/ appkey: "", /*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/ unid: ""/*自定义统计字段*/ };
     win.alimamatk_onload = win.alimamatk_onload || [];
     win.alimamatk_onload.push(o);
-})(window, document);</script>
+
+})(window, document);
+</script>
+
+<script type="text/javascript">
+
+(function (win, doc) {
+    //默认显示分类
+    jili.taobao.searchBycatgory(1);
+
+    $('#tabs-1').infinitescroll({
+        loading: {
+            finishedMsg: "<br style='clear:both'/><em>没有更多了。</em>",
+            img: "{{ asset('images/taobao/progressBar.gif')}}",
+            msgText: ""
+        },
+        navSelector: '#more',
+        nextSelector: '#more a',
+        itemSelector: ".cell",
+        debug: true,
+        dataType: 'json',
+        contentSelector: '#waterfall',
+        animate: false,
+        extraScrollPx: 50,
+        template: function(data) {
+            $boxes = $("<div class = 'container'></div>");
+            $.each(data.keywords, function(key, value)
+            {
+                myString = "<div class = 'cell'>" + value.content + "</div>";
+                $box = $(myString);
+                $boxes.append($box);
+                console.log(value.content);
+            });
+            return $boxes.find('.cell');
+        }
+    })
+
+})(window, document);
+</script>
+
 </div>
 {% endblock %}
 
