--- a/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -32,25 +32,32 @@
                                     <input type="hidden" name="sex" value="{{ sex }}"/>
                                 </li>
                                 <li>为保障您的账号安全，请设置QQ邮箱作为找回账号的方式。</li>
-                                <li><label for="qqEmail">邮箱地址：</label><input id="email_id" name="email_id" class="qqEmail" type="text" value="{{ email }}"/>@qq.com<strong class="errorMsg" id="emailError">输入的错误信息好多啊</strong></li>
+                                <li><label for="qqEmail">邮箱地址：</label>{{ form_widget(form.email_id, { 'attr': {'class': 'qqEmail'} }) }}@qq.com<strong class="errorMsg" id="emailError">{{ form_errors(form.email_id) }}</strong></li>
                                 <li><label for="setPwd">设置密码：</label><input name="pwd" type="password" value=""/></li>
-                            <li><input type="checkbox" checked/>下次自动登录</li>
-                            <li><span class="submitBtn" id='info'>完善资料</span><a class="submitBtn corGlobBlue font14 textUL">下次再说>></a></li>
+                                <br />
+                                <li><span class="submitBtn" id='info'>完善资料</span><a id="reg" class="submitBtn corGlobBlue font14 textUL">下次再说>></a></li>
                         </ul>
+                                {{ form_rest(form) }}
                         </form>
                         {# else bind jili id#}
                         <span class="Jl fontYH">已有积粒网账号</span>
                         <form action="{{ path('qq_bind') }}" method="post" name="form2" id="form2" >
                         <ul class="bindAccount">
                             <li>将已有的积粒网账号与QQ账号绑定</li>
-                            <li><label for="kxUser">积粒账号：</label><input name="kxUser" type="text" value="{{ email }}"/><strong class="errorMsg" id="emailError">输入的错误信息好多啊</strong></li>
-                            <li><label for="kxPwd">登录密码：</label><input id="pwd" name="kxPwd" type="password" value=""/>{% if 1 %}
+                            <li><label for="kxUser">积粒账号：</label><input name="jili_email" type="text" value="{{ email }}"/>
+                                <strong class="errorMsg" id="emailError">
+                                    {% if bindcode is  defined %}
+                                        {{ bindcode }}
+                                    {% endif %}
+
+                                </strong></li>
+                            <li><label for="kxPwd">登录密码：</label><input id="pwd" name="jili_pwd" type="password" value=""/>{% if 1 %}
                                 {# if code_nick #}
                                 <strong class="errorMsg" id="nickError">{# code_nick #}</strong>
                             {% else %}2-20个字符
                                 {% endif %}</li>
-                            <li><input type="checkbox" checked/>下次自动登录</li>
-                            <li><span id='bind' class="submitBtn">立即绑定</span><a class="corGlobBlue" href="#">忘记密码</a></li>
+                                <br />
+                                <li><span id='bind' class="submitBtn">立即绑定</span><a class="corGlobBlue" href="#">忘记密码</a></li>
                         </ul>
                         </form>
                         {#endif#}
