--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -25,12 +25,9 @@
                     {% endfor %}
                 </ul>
                 <div class="taobaoCon"></div>
-                 <!-- <div class="tablist block" id="tabs-1">
-                    <div id="waterfall">
-                        <img src="{{ asset('images/taobao/items.jpg')}}"/>
-                    </div>
-                    <div id="more" class="more"></div>
-                </div> -->
+                <div style="display:none" id="loading_bar">
+                {{ asset('images/taobao/progressBar.gif')}}
+                </div>
             </div>
         </div>
         <div class="itemR">
